--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Wishing you all the love, joy, and happiness in the world. May this year bring you endless smiles and laughter. You deserve the best!</p>
         <p class="heart">🥳🥳❤️💕💕</p>
     </div>
-    <img src="file:///C:/Users/Admin/Downloads/photo-1610670444950-0b29430891b4.avif" class="cake-img">
+    <img src="photo1.avif" class="cake-img">
     <button class="button" onclick="alert('Happy Birthday to Docter Anamika kashyap 🎉🎂')">Click for a Birthday Surprise</button>
 
     <!-- Confetti Animation -->
@@ -27,7 +27,7 @@
         <div style="top: 45%; left: 80%; animation-delay: 4s;"></div>
         <div style="top: 25%; left: 90%; animation-delay: 5s;"></div>
     </div>
-    <img src="file:///C:/Users/Admin/Downloads/photo-1513546493312-0066d7de3fd2.avif" class="cake-img2">
+    <img src="photo2.avif" class="cake-img2">
    
 </body>
 </html>
